Complete sentences are nice

--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -369,7 +369,7 @@ spec:
           roles: ['$1-admin']     # gerenerates a role name from the value capture
 ```
 
-If we grant Alice the `product-admin` role and add some :
+If we grant Alice the `product-admin` role and add some entried to the `projects` trait:
 
 ```yaml
 kind: user
