Update download query param filter for mac
This was changed from `macos` to `mac` at some point.

(cherry picked from commit cc51ffd3c8ed298f248b0a1abfb830e513ac6718)

--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -158,7 +158,7 @@ Here's a selection of compatible two-factor authentication apps:
 
 <Tabs>
   <TabItem label="Mac">
-    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=macos) (`tsh` client only, signed) file, double-click to run the installer.
+    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=mac) (`tsh` client only, signed) file, double-click to run the installer.
   </TabItem>
 
   <TabItem label="Mac - Homebrew">
@@ -167,7 +167,7 @@ Here's a selection of compatible two-factor authentication apps:
     ```
 
     <Admonition type="note">
-      The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=macos).
+      The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=mac).
     </Admonition>
   </TabItem>
 
