--- a/docs/pages/installation.mdx
+++ b/docs/pages/installation.mdx
@@ -97,7 +97,7 @@ helm install teleport teleport/teleport-cluster
 
 <Tabs>
   <TabItem label="Download">
-    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=macos) (tsh client only, signed) file, double-click to run the Installer.
+    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=mac) (tsh client only, signed) file, double-click to run the Installer.
 
     <Admonition type="note">
       This method only installs the `tsh` client for interacting with Teleport clusters.
@@ -111,7 +111,7 @@ helm install teleport teleport/teleport-cluster
     ```
 
     <Admonition type="note">
-      The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=macos).
+      The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=mac).
     </Admonition>
   </TabItem>
 
