--- a/docs/pages/user-manual.mdx
+++ b/docs/pages/user-manual.mdx
@@ -55,12 +55,12 @@ to call [`tsh login`](cli-docs.mdx#tsh-login) in the beginning.
 ## Installing tsh
 
 - Windows Users: [Download tsh Binary](https://gravitational.com/teleport/download?os=windows)
-- Mac Users: [Download Mac Teleport Binary. Includes tsh](https://gravitational.com/teleport/download?os=macos)
+- Mac Users: [Download Mac Teleport Binary. Includes tsh](https://gravitational.com/teleport/download?os=mac)
 - Mac Users with [Homebrew](https://brew.sh/): `brew install teleport`
 - Linux Users: [Download Linux Teleport Binary. Includes tsh](https://gravitational.com/teleport/download?os=linux)
 
 <Admonition type="note">
-  The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=macos).
+  The Teleport package in Homebrew is not maintained by Teleport. We recommend the use of our [own Teleport packages](https://goteleport.com/teleport/download?os=mac).
 </Admonition>
 
 ## User identities
