Switch from iframes to videoBanner

--- a/docs/pages/application-access/getting-started.mdx
+++ b/docs/pages/application-access/getting-started.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting Started with Teleport Application Access
 description: Getting started with Teleport Application Access.
+videoBanner: 5Uwhp3IQMHY
 ---
 
 # Getting Started
@@ -10,17 +11,6 @@ Let's connect to Grafana using Teleport Application Access in three steps:
 - Launch Grafana in a Docker container.
 - Install Teleport and configure it to proxy Grafana.
 - Access Grafana through Teleport.
-
-## Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/5Uwhp3IQMHY?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Prerequisites
 
