--- a/docs/pages/enterprise/sso/ssh-google-workspace.mdx
+++ b/docs/pages/enterprise/sso/ssh-google-workspace.mdx
@@ -2,6 +2,7 @@
 title: SSH Authentication With Google Workspace (G Suite)
 description: How to configure SSH access with Google Workspace (also known as G Suite) using Teleport
 h1: SSH Authentication with Google Workspace (G Suite)
+videoBanner: WTLWc6nnPfk
 ---
 
 ## Google Workspace as SSO for SSH
@@ -23,15 +24,6 @@ to define policies like:
   edition of Teleport only supports [Github](../../admin-guide.mdx#github-oauth-20) as
   an SSO provider.
 </Admonition>
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/WTLWc6nnPfk?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Prerequisites
 
