--- a/docs/pages/enterprise/workflow/ssh-approval-pagerduty.mdx
+++ b/docs/pages/enterprise/workflow/ssh-approval-pagerduty.mdx
@@ -2,6 +2,7 @@
 title: SSH login approval via Pager Duty
 description: How to configure SSH login approval using PagerDuty and Teleport
 h1: SSH Login Approval using PagerDuty
+videoBanner: RzTB4Lsm09M
 ---
 
 ## Teleport PagerDuty Plugin Setup
@@ -10,15 +11,6 @@ This guide will talk through how to setup Teleport with PagerDuty. Teleport to
 PagerDuty integration  allows you to treat Teleport access and permission
 requests as PagerDuty incidents — notifying the appropriate team, and approve
 or deny the requests via PagerDuty special action.
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/RzTB4Lsm09M?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Setup
 
