--- a/docs/pages/server-access/getting-started.mdx
+++ b/docs/pages/server-access/getting-started.mdx
@@ -1,6 +1,7 @@
 ---
 title: Server Access Getting Started Guide
 description: Getting started with Teleport Server Access.
+videoBanner: EsEvO5ndNDI
 ---
 
 # Getting Started
@@ -33,17 +34,6 @@ This guide introduces some of these common scenarios and how to interact with Te
 - Teleport (=teleport.version=) installed locally.
 
 (!docs/pages/includes/permission-warning.mdx!)
-
-## Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/EsEvO5ndNDI?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Step 1/4. Create a cluster
 
