--- a/docs/pages/server-access/introduction.mdx
+++ b/docs/pages/server-access/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Teleport Server Access Features and Introduction
 description: Teleport Server Access features and introduction.
+videoBanner: EsEvO5ndNDI
 ---
 
 # Server Access
@@ -13,17 +14,6 @@ Teleport Server Access is designed for the following kinds of scenarios:
 2. When security team members must track and audit every user session. 
 3. When Teleport users require a complete, dedicated, and secure SSH option (Teleport Node running in SSH mode) and more than a certificate authority (Teleport Auth) with proxy (Teleport Proxy).
 4. When resource and network security must be maximized: SSH certificates over secret keys, Two-Factor Authentication (2FA), Single Sign-On (SSO), and short-lived certificates.
-
-## Demo
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/EsEvO5ndNDI?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Getting started
 
