--- a/docs/pages/access-controls/guides/dual-authz.mdx
+++ b/docs/pages/access-controls/guides/dual-authz.mdx
@@ -1,6 +1,7 @@
 ---
 title: Dual Authorization
 description: Dual Authorization for SSH and Kubernetes.
+videoBanner: b_iqJm_o15I
 ---
 
 # Dual Authorization
@@ -32,17 +33,6 @@ two team members for a privileged role `dbadmin`.
 - Installed [Teleport Enterprise](../../enterprise/introduction.mdx) or [Teleport Cloud](../../cloud/introduction.mdx) >= (=teleport.version=)
 - [Tctl enterprise admin tool](https://goteleport.com/teleport/download) >= (=teleport.version=)
 - Mattermost installed.
-
-## Demo
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/b_iqJm_o15I?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 <Admonition
   type="tip"
