--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting started
 description: Getting started with Teleport - identity-aware, multi-protocol access proxy for SSH, HTTPS, Kubernetes, and more.
+videoBanner: jvaCmQyHghY
 ---
 
 This tutorial will guide you through the steps needed to install and run
@@ -13,17 +14,6 @@ Teleport (=teleport.version=) on Linux machines.
 - A two-factor authenticator app.
 - An SSH client like OpenSSH.
 - Around 20 minutes to complete; half of this may be waiting for DNS propagation.
-
-## Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/jvaCmQyHghY?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Step 1/4. Install Teleport on a Linux host
 
