--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -3,6 +3,7 @@ title: Introduction to Teleport
 description: How to install and quickly get up and running with Teleport to set up SSH and Kubernetes access to cloud environments.
 h1: Introduction
 layout: tocless-doc
+videoBanner: 0HlyGk8dihM
 ---
 
 ## What is Teleport
@@ -33,15 +34,6 @@ Teleport is a Certificate Authority and an Access Plane for your infrastructure.
     OIDC, SAML, compliance controls and commercial support.
   </Tile>
 </TileSet>
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/0HlyGk8dihM?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 <TileSet>
   <TileList title="Reach out" icon="question">
