--- a/docs/pages/kubernetes-access/getting-started.mdx
+++ b/docs/pages/kubernetes-access/getting-started.mdx
@@ -1,6 +1,7 @@
 ---
 title: Getting Started with Kubernetes Access
 description: Getting started with Teleport Kubernetes Access.
+videoBanner: VPGYLEMTdJ8
 ---
 
 # Getting Started
@@ -10,17 +11,6 @@ Let's deploy Teleport in a Kubernetes with SSO and Audit logs:
 - Install Teleport in a Kubernetes cluster.
 - Set up Single Sign-On (SSO).
 - Capture and playback Kubernetes commands.
-
-## Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/VPGYLEMTdJ8?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Prerequisites
 
