--- a/docs/pages/openssh-teleport.mdx
+++ b/docs/pages/openssh-teleport.mdx
@@ -1,6 +1,7 @@
 ---
 title: Using Teleport with OpenSSH
 description: How to use Teleport on legacy systems with OpenSSH and sshd
+videoBanner: x0eYFUEIOrM
 ---
 
 Teleport is fully compatible with OpenSSH and can be quickly setup to record and
@@ -23,17 +24,6 @@ existing SSH implementations, such as OpenSSH. This section will cover:
   The minimum OpenSSH version which will work with Teleport is version 6.9.
   You can view your OpenSSH version with `ssh -V`.
 </Admonition>
-
-### Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/x0eYFUEIOrM?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Architecture
 
