--- a/docs/pages/setup/guides/terraform-provider.mdx
+++ b/docs/pages/setup/guides/terraform-provider.mdx
@@ -1,23 +1,13 @@
 ---
 title: Terraform Provider
 description: Configuration as a code with Terraform Provider
+videoBanner: YgNHD4SS8dg
 ---
 
 This section will cover:
 
 - Setting up Teleport's terraform provider on Linux and Mac.
 - Configuring users and roles using terraform provider for Cloud, Enterprise and Open Source editions.
-
-## Follow along with our video guide
-
-<iframe
-  width="712"
-  height="400"
-  src="https://www.youtube-nocookie.com/embed/YgNHD4SS8dg?rel=0&modestbranding=1"
-  frameBorder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 ## Prerequisites
 
