--- a/docs/pages/kubernetes-access/getting-started.mdx
+++ b/docs/pages/kubernetes-access/getting-started.mdx
@@ -1,6 +1,7 @@
 ---
-title: Getting started
-description: Getting started with Teleport - identity-aware access plane for SSH, HTTPS, Kubernetes, and Databases.
+title: Getting Started with Kubernetes Access
+description: Getting started with Teleport Kubernetes Access.
+videoBanner: VPGYLEMTdJ8
 layout: tocless-doc
 ---
 
