--- a/docs/pages/production.mdx
+++ b/docs/pages/production.mdx
@@ -183,7 +183,7 @@ proxy_service:
 When setting up on Teleport on AWS or GCP, we recommend leveraging their certificate
 managers.
 
-- [ACM](https://gravitational.com/teleport/docs/aws-oss-guide/#acm) on AWS
+- [ACM](./setup/deployments/aws-terraform.mdx#acm) on AWS
 - [Google-managed SSL certificates](https://cloud.google.com/load-balancing/docs/ssl-certificates) on GCP
 
 When setting up Teleport with a Cloud Provider, it can be common to terminate
