Sasha/doc backports (#7875)
* Try mini-diagrams and update launchpad titles (#7684)
* Try mini-diagrams and update launchpad titles
* fix some reports and links
* clarity around ansible config for teleport (#6418)
this new info would have saved me a trip to the ansible documentation
* Update PAM page (#7719)
* Add Restricted Session docs (#7673)
* Reference docs for AuthPreference (#7503)
* Update SSO guides (#7671)
* Cleaning Okta copy.
* Update other connectors.
* Cleanup and URL tweaks.
* Tweaks, update and k8s agent getting started (#7656)

--- a/docs/pages/cloud/faq.mdx
+++ b/docs/pages/cloud/faq.mdx
@@ -3,9 +3,14 @@ title: Teleport Cloud FAQ
 description: Teleport cloud frequently asked questions.
 ---
 
-### Can I use Teleport Cloud Preview in production?
+### Can I use Teleport Cloud in production?
 
 Yes.
+
+## What is the cloud SLA
+
+Teleport Cloud commits to SLA of (=cloud.sla.monthly_percentage=)% of monthly uptime percentage,
+a maximum of (=cloud.sla.monthly_downtime=) of downtime per month.
 
 ### How does Cloud Billing work?
 
@@ -68,12 +73,10 @@ cluster on AWS.
 ### Will Teleport be automatically upgraded with each release?
 
 We will be upgrading the preview version of Teleport Cloud automatically.
-We will add an option to trigger upgrades manually and automatically
-within a configurable maintenance window.
 
 ### Does your SOCII report include Teleport Cloud?
 
-Yes.
+(!docs/pages/includes/soc2.mdx!)
 
 ### Can a customer deploy multiple clusters in Teleport Cloud?
 
