--- a/docs/pages/access-controls/getting-started.mdx
+++ b/docs/pages/access-controls/getting-started.mdx
@@ -25,11 +25,8 @@ tctl status
 
 # Output
 Cluster  acme.example.com
-Version  6.0.2
-Host CA  never updated
-User CA  never updated
-Jwt CA   never updated
-CA pin   sha256:e63c7c44be468d37a5b0276b70e9d10b17f24f4be19d6b579810fc94eaa31783
+Version  (=teleport.version=)
+CA pin   sha256:sha-hash-here
 ```
 
 {/* Convert to new UI component https://github.com/gravitational/next/issues/275 */}
@@ -107,7 +104,7 @@ We're now going to set up a GitHub connector for Teleport Open Source Edition an
   </TabItem>
 
   <TabItem label="Enterprise">
-    Follow [SAML Okta Guide](../enterprise/sso/ssh-okta.mdx#configure-okta) to create a SAML app.
+    Follow [SAML Okta Guide](../enterprise/sso/okta.mdx#configure-okta) to create a SAML app.
     Check out [OIDC guides](../enterprise/sso/oidc.mdx#identity-providers) for OpenID Connect apps.
     Save the file below as `okta.yaml` and update the `acs` field.
     Any member in Okta group `okta-admin` will assume a built-in role `admin`.
