Add new video banners

--- a/docs/pages/database-access/guides/mysql-aws.mdx
+++ b/docs/pages/database-access/guides/mysql-aws.mdx
@@ -1,6 +1,7 @@
 ---
 title: Database Access with MySQL on AWS
 description: How to configure Teleport Database Access with AWS RDS/Aurora MySQL.
+videoBanner: VrZXZtxjNes
 ---
 
 # AWS RDS/Aurora MySQL
