--- a/docs/pages/database-access/guides/postgres-redshift.mdx
+++ b/docs/pages/database-access/guides/postgres-redshift.mdx
@@ -1,6 +1,7 @@
 ---
 title: Database Access with Redshift on AWS
 description: How to configure Teleport Database Access with AWS Redshift PostgreSQL.
+videoBanner: VrZXZtxjNes
 ---
 
 # AWS Redshift PostgreSQL
