Added 08/13 Release Update.

--- a/docs/pages/preview/upcoming-releases.mdx
+++ b/docs/pages/preview/upcoming-releases.mdx
@@ -8,25 +8,13 @@ The teleport team delivers a new major release roughly every 3 months.
 
 ## Teleport
 
-### Teleport 7.0 "Stockholm"
-
-Teleport 7.0 will focus on adding support for the MongoDB protocol, BPF based restricted sessions, UX improvements, and foundations for automatic upgrades. Other features have been delayed to a Teleport 7 minor release.
-
-You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/54).
-
-| Version     | Date            | Description                      |
-| ----------- | --------------- | -------------------------------- |
-| First alpha | June 1st, 2021  | Good for some testing and demos. |
-| First beta  | June 15th, 2021 | Deploy on staging.               |
-| Release     | July 30th, 2021 | Good to go for production.       |
-
 ### Teleport 7.1
 
-Teleport 7.1 will focus on [HSM](https://github.com/gravitational/teleport/issues/4225) and [session termination and user locking](https://github.com/gravitational/teleport/issues/3360) which were delayed from 7.0 due to timing constraints.
+Teleport 7.1 will focus on [HSM](https://github.com/gravitational/teleport/issues/4225), [session termination and user locking](https://github.com/gravitational/teleport/issues/3360), and additional FedRAMP compliance controls which were delayed from 7.0 due to timing constraints.
 
 | Version | Date              | Description         |
 | ------- | ----------------- | ------------------- |
-| Release | August 16th, 2021 | Production release. |
+| Release | August 23th, 2021 | Production release. |
 
 You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/58).
 
@@ -36,9 +24,9 @@ Teleport 7.2 will focus on [simplified node joining](https://github.com/gravitat
 
 You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/60).
 
-| Version | Date              | Description         |
-| ------- | ----------------- | ------------------- |
-| Release | August 30th, 2021 | Production release. |
+| Version | Date                | Description         |
+| ------- | ------------------- | ------------------- |
+| Release | September 6th, 2021 | Production release. |
 
 ## Teleport Cloud "Washington"
 
