--- a/docs/pages/cli-docs.mdx
+++ b/docs/pages/cli-docs.mdx
@@ -1242,3 +1242,37 @@ Print cluster version:
 ```bash
 tctl version
 ```
+
+## Experimental features
+
+### tctl access ls
+
+Displays user accesses to SSH nodes
+
+```bash
+tctl access ls [--user <user> | --login <login> | --node <hostname>][<flags>]
+```
+
+#### Flags
+
+| Name | Default Value(s) | Allowed Value(s) | Description |
+| - | - | - | - |
+| `--user` | none | existing user | Teleport user name |
+| `--login` | none | user login | Teleport user login |
+| `--node` | none | existing hostname | Teleport node hostname |
+| `--namespace` | default | existing namespace | Teleport namespace |
+
+#### Examples
+
+```bash
+# Get all user accesses over all nodes
+tctl access ls
+# Get accesses for user 'joe'
+tctl access ls --user joe
+# Get accesses for node 'prod'
+tctl access ls --node prod
+# Get accesses for login 'root'
+tctl access ls --login root
+# Get accesses for user 'joe', node 'prod', and login 'root'
+tctl access ls --user joe --login root --node prod
+```
