--- a/rfd/0025-hsm.md
+++ b/rfd/0025-hsm.md
@@ -290,14 +290,12 @@ On startup, Auth server will fetch existing CAs from the backend and:
 - if no CAs exist, create a key in HSM and register it in `ActiveKeys`
   - this takes care of brand new Teleport clusters
 - if CAs exist, but _don't_ have an HSM key from this host registered in
-  `ActiveKeys`, add "provisional" keypairs to the Host CA.
-  - provisional keys are the same as any other keys and will be held in the HSM.
-  - provisional keys are necessary to allow `tctl` to connect to the auth
-    server.
-  - it is safe for other parts of the cluster to trust provisional keys, but
-    they are not expected to.
-  - print a warning on startup and in `tctl status` until a CA rotation rotates
-    out the provisional keys.
+  `ActiveKeys`, create a key in HSM and register it in `AdditionalTrustedKeys`
+  - this key will be used to sign the Admin identity, necessary for tctl
+  - this key is not expected to be trusted by the rest of the cluster until a CA
+    rotation is completed, but will be trusted by the local auth server.
+  - print a warning on startup and in `tctl status` until a CA rotation is
+    completed.
   - all user and jwt signing operations against this Auth server will fail until
     rotation; when adding a new HSM-enabled Auth server to the cluster, admins
     should not route any traffic to it until the rotation is complete
@@ -312,7 +310,7 @@ On startup, Auth server will fetch existing CAs from the backend and:
 When rotation is initiated through a different Auth server, Auth servers with
 HSMs will add a new PKCS#11 key reference to CA `AdditionalTrustedKeys` in the
 `init` phase of rotation. Admins should not perform a rotation with
-`--gracePeriod=0` (or any very short value, less than 1 minute) so that all auth
+`--grace_period=0` (or any very short value, less than 1 minute) so that all auth
 servers have a chance to add their keys. A message will be logged when this is
 completed.
 
@@ -324,8 +322,8 @@ completed.
     the UUID and dis-associate the old HSM key from this instance; from there
     the Auth server behaves as if it is brand new.
 2. HSM is de-configured (switching back to raw keys)
-  - The auth server will add provisional raw keys and require a CA rotation,
-    see [Migration](#Migration).
+  - The auth server will add AdditionalTrusted raw keys and require a CA
+    rotation, see [Migration](#Migration).
 3. HA cluster has a mix of HSM and non-HSM auth servers
   - This is supported.
   - Assume the cluster is in the middle of migrating, it's expected to migrate
