--- a/docs/pages/kubernetes-access/helm/reference.mdx
+++ b/docs/pages/kubernetes-access/helm/reference.mdx
@@ -50,6 +50,7 @@ This reference details available values for the `teleport-cluster` chart.
   If you are not using ACME certificates, you may also need to accept insecure warnings in your browser to view the page successfully.
 </Admonition>
 
+
 ## `kubeClusterName`
 
 | Type | Default value | Required? | `teleport.yaml` equivalent | Can be used in `custom` mode? |
@@ -57,6 +58,15 @@ This reference details available values for the `teleport-cluster` chart.
 | `string` | `clusterName` value | no | `kubernetes_service.kube_cluster_name` |  ✅ |
 
 `kubeClusterName` sets the name used for the Kubernetes cluster. This name will be shown to Teleport users connecting to the cluster.
+
+## `authenticationType`
+
+| Type | Default value | Required? | `teleport.yaml` equivalent | Can be used in `custom` mode? |
+| - | - | - | - | - |
+| `string` | `local` | Yes | `auth_service.authentication.type` | ❌ |
+
+`authenticationType` controls the authentication scheme used by Teleport. Possible values are `local` and `github` for OSS, plus `oidc`, `saml`, and `false` for Enterprise.
+
 
 ## `enterprise`
 
