Cert to Certificates to match screenshot

--- a/docs/pages/database-access/guides/gui-clients.mdx
+++ b/docs/pages/database-access/guides/gui-clients.mdx
@@ -145,7 +145,7 @@ Once you are back in the "Connection Settings" window navigate to the "Driver Pr
 
 ![DBeaver TLS Settings](../../../img/database-access/dbeaver-tls-settings.png)
 
-Navigate to the "SSL" tab, check the "Use SSL" box, uncheck the "Verify Server Certificates" box, and copy the `CA Cert`, `Client Cert`, and `Client Private Key` paths from the `tsh db config` output:
+Navigate to the "SSL" tab, check the "Use SSL" box, uncheck the "Verify Server Certificates" box, and copy the `CA Certificate`, `Client Certificate`, and `Client Private Key` paths from the `tsh db config` output:
 
 ![DBeaver SSL](../../../img/database-access/dbeaver-ssl.png)
 
