--- a/docs/pages/production.mdx
+++ b/docs/pages/production.mdx
@@ -27,21 +27,25 @@ Before installing anything there are a few things you should think about.
 - What does your existing network configuration look like?
   - Are you able to administer the network firewall rules yourself or do you need to work with a network admin?
   - Are these nodes accessible to the public Internet or behind NAT?
+  - Will the TLS certificate stop at a load balancer or at Teleport's Proxy Service?
+  - Do you require port access only on `443` for web and desktop clients?
 - Which users, ([Roles or ClusterRoles](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) on k8s) are set up on the existing system?
   - Can you add new users or Roles yourself or do you need to work with a system administrator?
 
 ## Firewall configuration
 
-Teleport services listen on several ports. This table shows the default port numbers.
+Teleport services listen on several ports. This table shows the default port numbers. See the [YAML reference](config-reference.mdx) for setting listen ports and public addresses for the services.
 
 | Port | Service | Description | Ingress | Egress |
 | - | - | - | - | - |
-| `3080` | Proxy | HTTPS port clients connect to. Used to authenticate `tsh` users and web users into the cluster. | Allow inbound connections from HTTP and SSH clients. | Allow outbound connections to HTTP and SSH clients. |
-| `3023` | Proxy | SSH port clients connect to after authentication. A proxy will forward this connection to port `3022` on the destination node. | Allow inbound traffic from SSH clients. | Allow outbound traffic to SSH clients. |
-| `3022` | Node | SSH port to the Node Service. This is Teleport's equivalent of port `22` for SSH. | Allow inbound traffic from the proxy host. | Allow outbound traffic to the proxy host. |
-| `3025` | Auth | SSH port used by the Auth Service to serve its Auth API to other nodes in a cluster. | Allow inbound connections from all cluster nodes. | Allow outbound traffic to cluster nodes. |
-| `3024` | Proxy | SSH port used to create "reverse SSH tunnels" from behind-firewall environments into a trusted proxy server. | {/* TODO */} | {/* TODO */} |
-| `3026` | Kubernetes | Port used for `kubectl` to access Teleport | {/* TODO */} | {/* TODO */} |
+| `3080` | Proxy | Web port clients and nodes connect to. Optionally change to `443` that many of the Teleport examples demonstrate. Used to authenticate `tsh` users and web users into the cluster.  | Allow inbound connections from HTTP/HTTPS, nodes, and SSH clients with websockets allowed. | Allow outbound connections to HTTPS, nodes, and SSH clients. |
+| `3023` | Proxy | SSH port clients connect to after authentication. Required for Teleport's `tsh` desktop client communication. | Allow inbound traffic from SSH clients. | Allow outbound traffic to SSH clients. |
+| `3022` | Node | SSH port to the Node Service. This is Teleport's equivalent of port `22` for SSH.  Not required if a node is using a reverse tunnel configuration. | Allow inbound traffic from the proxy host. | Allow outbound traffic to the proxy host. |
+| `3025` | Auth | SSH port used by the Auth Service to serve its Auth API to the Proxy and nodes in a cluster. | Allow inbound connections from all cluster nodes and proxy. | Allow outbound traffic to cluster nodes to the auth host. |
+| `3024` | Proxy | Port used to create "reverse tunnels" from behind-firewall environments into a trusted proxy server. | Allow inbound traffic to nodes. | Allow outbound traffic to nodes to the proxy host.  |
+| `3026` | Kubernetes | Port used for `kubectl` to access Teleport | Allow inbound traffic to kubectl clients.|  Allow outbound traffic to kubectl clients to the proxy host. |
+| `3036` | Database | Port used for `mysql` clients to access Teleport | Allow inbound traffic to MySQL clients.| Allow outbound traffic to MySQL clients to the proxy host. |
+| `5432` | Database | Port used for PostgreSQL clients to access Teleport.  This port is typically used when a Application Load Balancer is used that maintains the TLS certficate for the Teleport proxy public address. | Allow inbound traffic to PostgreSQL clients.| Allow outbound traffic to PostgreSQL clients to the proxy host.|
 
 {
   /* TODO: Add several diagrams of firewall config examples */
