--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -366,7 +366,7 @@ spec:
       claims_to_roles:
         - claim: 'projects'         
           value: '^product-(.*)$' # matches all group names with a leading 'product-'
-          roles: ['$1-admin']     # gerenerates a role name from the value capture
+          roles: ['$1-admin']     # generates a role name from the value capture
 ```
 
 If we grant Alice the `product-admin` role and add some entried to the `projects` trait:
