--- a/docs/pages/database-access/getting-started.mdx
+++ b/docs/pages/database-access/getting-started.mdx
@@ -156,7 +156,7 @@ Log into Teleport with the user we've just created. Make sure to use `tsh`
 version `6.0` or newer that includes Database Access support.
 
 ```shell
-tsh login --proxy=teleport.example.com:443 --user=alice
+tsh login --proxy=teleport.example.com --user=alice
 ```
 
 Now we can inspect available databases and retrieve credentials for the
