--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -196,14 +196,14 @@ Log in to receive short-lived certificates from Teleport:
 
 ```bash
 # Replace teleport.example.com:443 with your Teleport cluster's public address as configured above.
-tsh login --proxy=teleport.example.com:443 --user=teleport-admin
+tsh login --proxy=teleport.example.com --user=teleport-admin
 ```
 
 ## Step 4/4. Have fun with Teleport!
 
 Congrats! You've completed setting up Teleport! Now, feel free to have fun and explore the many features Teleport has to offer.
 
-Here are several common commands and operations you'll likely find useful: 
+Here are several common commands and operations you'll likely find useful:
 
 ### View Status
 
