--- a/docs/pages/includes/tctl.mdx
+++ b/docs/pages/includes/tctl.mdx
@@ -12,7 +12,7 @@ tctl status
 To try this flow in the cloud, login into your cluster using tsh, then use tctl remotely:
 
 ```bash
-tsh login --proxy=myinstance.teleport.sh:443
+tsh login --proxy=myinstance.teleport.sh
 
 # tctl (Enterprise edition) can use tsh credentials as of version 5.0
 tctl status
