--- a/docs/pages/setup/deployments/aws-terraform.mdx
+++ b/docs/pages/setup/deployments/aws-terraform.mdx
@@ -489,7 +489,7 @@ You can [download the Teleport package containing the `tsh` client from here](ht
 - the client is the same for both OSS and Enterprise versions of Teleport.
 
 ```bash
-$ tsh login --proxy=${TF_VAR_route53_domain}:443 --user=teleport-admin
+$ tsh login --proxy=${TF_VAR_route53_domain} --user=teleport-admin
 Enter password for Teleport user teleport-admin:
 Enter your OTP token:
 567989
