--- a/docs/pages/cloud/guides/u2f.mdx
+++ b/docs/pages/cloud/guides/u2f.mdx
@@ -14,8 +14,8 @@ Install client libraries:
   <TabItem label="Linux">
     ```bash
     curl -O https://get.gravitational.com/teleport-ent-v(=teleport.version=)-linux-amd64-bin.tar.gz
-    # verify signature 
-    echo "$(curl  https://get.gravitational.com/teleport-ent-v(=teleport.version=)-linux-amd64-bin.tar.gz.sha256)" | sha256sum --check 
+    # verify signature
+    echo "$(curl  https://get.gravitational.com/teleport-ent-v(=teleport.version=)-linux-amd64-bin.tar.gz.sha256)" | sha256sum --check
     tar -xzf teleport-ent-v(=teleport.version=)-linux-amd64-bin.tar.gz
     cd teleport-ent
     sudo ./install
@@ -27,7 +27,7 @@ Login with a teleport user with editor privileges:
 
 ```bash
 # tsh logs you in and receives short-lived certificates
-tsh login --proxy=myinstance.teleport.sh:443 --user=email@example.com
+tsh login --proxy=myinstance.teleport.sh --user=email@example.com
 # try out the connection
 tctl get nodes
 ```
