Removed 3080 port from tsh login examples

--- a/docs/pages/database-access/guides/mongodb-atlas.mdx
+++ b/docs/pages/database-access/guides/mongodb-atlas.mdx
@@ -152,7 +152,7 @@ certificate with `CN=alice` subject.
 Log into your Teleport cluster and see available databases:
 
 ```bash
-tsh login --proxy=teleport.example.com:3080 --user=alice
+tsh login --proxy=teleport.example.com --user=alice
 tsh db ls
 Name          Description Labels
 ------------- ----------- --------
