--- a/docs/pages/database-access/guides/postgres-redshift.mdx
+++ b/docs/pages/database-access/guides/postgres-redshift.mdx
@@ -220,7 +220,7 @@ Once the database service has joined the cluster, login to see the available
 databases:
 
 ```bash
-$ tsh login --proxy=teleport.example.com:3080 --user=alice
+$ tsh login --proxy=teleport.example.com --user=alice
 $ tsh db ls
 Name     Description             Labels
 -------- ----------------------- --------
