--- a/docs/pages/database-access/guides/postgres-cloudsql.mdx
+++ b/docs/pages/database-access/guides/postgres-cloudsql.mdx
@@ -263,7 +263,7 @@ Once the database service has joined the cluster, login to see the available
 databases:
 
 ```sh
-$ tsh login --proxy=teleport.example.com:3080 --user=alice
+$ tsh login --proxy=teleport.example.com --user=alice
 $ tsh db ls
 Name     Description              Labels
 -------- ------------------------ --------
