--- a/docs/pages/database-access/guides/postgres-self-hosted.mdx
+++ b/docs/pages/database-access/guides/postgres-self-hosted.mdx
@@ -171,7 +171,7 @@ Once the database service has joined the cluster, login to see the available
 databases:
 
 ```sh
-$ tsh login --proxy=teleport.example.com:3080 --user=testuser
+$ tsh login --proxy=teleport.example.com --user=testuser
 $ tsh db ls
 Name    Description        Labels
 ------- ------------------ --------
