--- a/docs/pages/setup/guides/docker.mdx
+++ b/docs/pages/setup/guides/docker.mdx
@@ -63,7 +63,7 @@ https://localhost:3080/web/invite/4f2718a52ce107568b191f222ba069f7
 NOTE: Make sure localhost:3080 points at a Teleport proxy which users can access.
 ```
 
-The Web UI will be available at the displayed URL. 
+The Web UI will be available at the displayed URL.
 
 (!docs/pages/includes/insecure-certificate.mdx!)
 
@@ -76,7 +76,7 @@ Finish signing up and creating your user using the generated link created previo
 Open a second terminal and issue the command:
 
 ```bash
-tsh login --proxy=localhost:3080 --insecure --user=testuser
+tsh login --proxy=localhost --insecure --user=testuser
 ```
 
 <Admonition type="note" title="Note">
@@ -113,9 +113,9 @@ tsh ls
 
 ```
 # Output
-Node Name Address        Labels                          
---------- -------------- ------------------------------- 
-localhost 127.0.0.1:3022 env=example, hostname=localhost 
+Node Name Address        Labels
+--------- -------------- -------------------------------
+localhost 127.0.0.1:3022 env=example, hostname=localhost
 ```
 
 To SSH into the local Node `localhost` (running in your Docker container) issue the following `tsh` command:
@@ -127,7 +127,7 @@ tsh ssh root@localhost
 This will bring up the Linux command prompt where you can issue Bash commands, traverse the directory tree, and explore the container contents:
 
 ```bash
-root@localhost:~# 
+root@localhost:~#
 ```
 
 ## Next steps
