Removed corrected version

--- a/docs/pages/access-controls/guides/impersonation.mdx
+++ b/docs/pages/access-controls/guides/impersonation.mdx
@@ -24,7 +24,7 @@ tctl status
 
 # Output
 Cluster  acme.example.com
-Version  7.0.2
+Version  (=teleport.version=)
 Host CA  never updated
 User CA  never updated
 Jwt CA   never updated
