--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -29,7 +29,7 @@ tctl status
 
 # Output
 Cluster  acme.example.com
-Version  ()=teleport.version=)
+Version  (=teleport.version=)
 Host CA  never updated
 User CA  never updated
 Jwt CA   never updated
