Moving to appropriate file.

--- a/docs/pages/setup/reference/cli.mdx
+++ b/docs/pages/setup/reference/cli.mdx
@@ -636,7 +636,11 @@ Environment variables configure your tsh client and can help you avoid using fla
 | - | - | - |
 | TELEPORT_AUTH | Name of a defined SAML, OIDC, or Github auth connector | okta |
 
+Environment variables configure your tsh client and can help you avoid using flags repetitively.
 
+| Environment Variable | Description | Example Value |
+| - | - | - |
+| TELEPORT_AUTH | Name of a defined SAML, OIDC, or Github auth connector | okta |
 | TELEPORT_CLUSTER | Name of a Teleport root or leaf cluster | cluster.example.com |
 | TELEPORT_LOGIN | Login name to be used by default on the remote host | root |
 | TELEPORT_LOGIN_BIND_ADDR | Address in the form of host:port to bind to for login command webhook | host:port |
