Move and expand troubleshooting section

--- a/docs/pages/setup/admin.mdx
+++ b/docs/pages/setup/admin.mdx
@@ -5,6 +5,9 @@ layout: tocless-doc
 ---
 
 <TileSet>
+  <Tile icon="wrench" title="Troubleshooting" href="./admin/troubleshooting.mdx">
+    Collect metrics and diagnostic information from Teleport.
+  </Tile>
   <Tile icon="wrench" title="Teleport Daemon" href="./admin/daemon.mdx">
     Setup and configure Teleport Linux Daemon as as Systemd unit.
   </Tile>
